# sqlite-vdbe

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: publish.yaml
c/: vdbe_rust.c
examples/: basic.rs  explain.rs  fibonacci.rs  strings.rs
scripts/: check_opcodes.py  fetch_opcode_docs.py
src/: connection.rs  error.rs  ffi.rs  insn.rs  lib.rs  program.rs  value.rs
tests/: display_test.rs  integration_test.rs
tests/snapshots/: display_test__program_explain_display.snap
