[package]
name = "sqlite_vdbe"
version = "0.0.1"
edition = "2024"
rust-version = "1.93"
description = "Low-level access to SQLite's VDBE bytecode engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/el-yawd/sqlite-vdbe"
keywords = ["sqlite", "vdbe", "bytecode", "database"]
categories = ["database", "api-bindings"]

[lib]
name = "sqlite_vdbe"
path = "src/lib.rs"

[features]
default = ["bundled"]
bundled = []

[build-dependencies]
cc = "1.0"
zip = "0.6"

[dev-dependencies]
